Fix usage of wrong parameter name in SuggestionsService

The former parameter "min" is ignored by the server. By changing it to
"num", the expected effects should show in our experiment.
(As the functionality is still feature-guarded and hasn't worked before,
there is no need to ensure compatibility.)

Change-Id: I3391da209c5e0a8b8fd892dd24db4d7940d470c1
Bug: 752885
Reviewed-on: https://chromium-review.googlesource.com/597649
Commit-Queue: Friedrich Horschig <fhorschig@chromium.org>
Reviewed-by: Mikel Astiz <mastiz@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492326}
Former-commit-id: 91d00178dfcd15890d2d7eb5d116436e6f6c846e